# rust-game-of-live

./: Cargo.toml
src/: app.rs  gof.rs  main.rs
