[package]
name = "rust_game_of_life"
version = "0.1.0"
authors = ["Mateusz <mateusz.dohojda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coffee = { version = "0.4", features = ["opengl"] }
rand = "0.8.3"